# JustPayStripe-Rust

./: .gitignore  Cargo.toml  README.md  build.rs  env_example  just_pay_stripe_offer_2025-07-25.mmd  make_structure.run.bash  make_structure.txt  payup_old_offer_2025-07-25.mmd  publish.sh  test_back_with_curl.bash  test_server_front.bash
app/: subscribe.tsx
chatgipity/: adding_feature.rs  change_into_proven_stripe.rs
crates/actix-openapi/tests/openapi/: error.yaml
examples/frontend/: index.html  main.js
examples/server/: cors.rs  env.rs  logger.rs  main.rs
src/: client.rs  kv_store.rs  lib.rs  logger.rs  stripe.rs
src/stripe/: checkout_session.rs  response.rs
src/types/: common.rs.dead  customer.rs.dead  mod.rs  subscription.rs
stripe_evolved_project/: main.rs
stripe_evolved_project_fixed/: main.rs
tests/: integration.rs  stripe_tests.rs
