[package]
name = "justpaystripe"
description = "Renewed KV Store Plus A synchronous + asynchronous payment library for processing payments with rust + stripe."
version = "0.2.0"
edition = "2021"
authors = ["Jesus Alcaraz <jesusalc@gmail.com>, Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/justpaystripe"
repository = "https://github.com/jesusalc/JustPayStripe-Rust"
readme = "README.md"

[dependencies]
serde_json = "1.0"
trust-dns-resolver = "0.23.2"
reqwest = { version = "0.11.9", default-features = false, features = ["blocking", "json", "multipart"] }
serde_derive = "1.0.130"
tokio = { version = "1.19.2", features = ["full"] }
dotenvy = "0.15.7"
actix-web = "4.11.0"
actix-cors = "0.7.1"
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
chrono = "0.4.41"
once_cell = "1.18"
utoipa = { version = "5.4.0", features = ["actix_extras", "yaml"] }
utoipa-swagger-ui = "9.0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["reqwest/default-tls", "trust-dns-resolver/dns-over-native-tls"]


[build-dependencies]
toml = "0.8.14"
